# HRI_project

booster_description/: README.md
booster_description/src/: CMakeLists.txt  package.xml
booster_description/src/launch/: my_view_ign.launch.py  view.launch.py
booster_description/src/rviz/: MTC_config.rviz
booster_description/src/urdf/: T1_23dof.urdf  T1_29dof.urdf
example/high_level/: b1_loco_example_client.cpp
